Bug 397843 - 'Position' is mispelled in balooctl indexSize output
Summary: 'Position' is mispelled in balooctl indexSize output
Status: RESOLVED FIXED
Alias: None
Product: frameworks-baloo
Classification: Frameworks and Libraries
Component: balooctl (other bugs)
Version First Reported In: 5.47.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: baloo-bugs-null
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2018-08-24 16:26 UTC by Kishore Gopalakrishnan
Modified: 2018-08-29 11:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2018-08-24 16:26:07 UTC
If we type 'balooctl indexSize', we get

```
    Actual Size: 77.68 MiB
    Expected Size: 49.20 MiB
    
                PostingDB:      10.02 MiB    20.364 %
             PosistionDB:      11.73 MiB    23.841 %
...
```

'Position' is mispelled above.
Comment 1 Scott Sloan 2018-08-29 03:19:02 UTC
Submitted a patch https://phabricator.kde.org/D15136
Comment 2 Laurent Montel 2018-08-29 11:29:56 UTC
Git commit 1d5693c142665b4d68a4c1651dba435774a91df2 by Laurent Montel.
Committed on 29/08/2018 at 11:28.
Pushed by mlaurent into branch 'master'.

Fixed a typo in the index size output

Patch from Scott Sloan (scottsloan at gmail.com)

Thanks
Differential Revision: https://phabricator.kde.org/D15136

M  +1    -1    src/tools/balooctl/main.cpp

https://commits.kde.org/baloo/1d5693c142665b4d68a4c1651dba435774a91df2