Fixed a typo in the index size output

Patch from Scott Sloan (scottsloan at gmail.com)

Thanks

BUG: 397843
Differential Revision: https://phabricator.kde.org/D15136